Getting rid of unicode in IT modernization

--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -253,10 +253,9 @@ Clark Minor:
   events:
   - agency: National Institute of Health
     date: '2025-02-24'
-    event: "Reports that DOGE have accounts are working with the NIH Business System\
-      \ Department for NIH\u2019s central electronic business system, which includes\
-      \ finance, budget, procurement, a property-management system, and a grant-tracking\
-      \ system"
+    event: Reports that DOGE have accounts are working with the NIH Business System
+      Department for NIH's central electronic business system, which includes finance,
+      budget, procurement, a property-management system, and a grant-tracking system
     name: Clark Minor
     source: https://www.wired.com/story/doge-is-inside-the-national-institutes-of-health-nih/
 Cole Killian:
@@ -460,8 +459,8 @@ Gavin Kliger:
     source: https://www.washingtonpost.com/opinions/2025/02/24/musk-doge-usaid-cuts-dc/
   - agency: US Agency for International Development
     date: '2025-01-30'
-    event: "Farritor and Kliger demanded that all senior managers be stripped of their\
-      \ power to authorize payments \u2014 and that they alone become the authorizers."
+    event: Farritor and Kliger demanded that all senior managers be stripped of their
+      power to authorize payments - and that they alone become the authorizers.
     name: Gavin Kliger
     source: https://www.washingtonpost.com/opinions/2025/02/24/musk-doge-usaid-cuts-dc/
   - agency: US Agency for International Development
@@ -611,10 +610,9 @@ Jeremy Lewin:
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576293/gov.uscourts.mdd.576293.77.2.pdf
   - agency: National Institute of Health
     date: '2025-02-24'
-    event: "Reports that DOGE have accounts are working with the NIH Business System\
-      \ Department for NIH\u2019s central electronic business system, which includes\
-      \ finance, budget, procurement, a property-management system, and a grant-tracking\
-      \ system"
+    event: Reports that DOGE have accounts are working with the NIH Business System
+      Department for NIH's central electronic business system, which includes finance,
+      budget, procurement, a property-management system, and a grant-tracking system
     name: Jeremy Lewin
     source: https://www.wired.com/story/doge-is-inside-the-national-institutes-of-health-nih/
   - agency: US Agency for International Development
@@ -830,8 +828,8 @@ Luke Farritor:
     source: https://www.washingtonpost.com/opinions/2025/02/24/musk-doge-usaid-cuts-dc/
   - agency: US Agency for International Development
     date: '2025-01-30'
-    event: "Farritor and Kliger demanded that all senior managers be stripped of their\
-      \ power to authorize payments \u2014 and that they alone become the authorizers."
+    event: Farritor and Kliger demanded that all senior managers be stripped of their
+      power to authorize payments - and that they alone become the authorizers.
     name: Luke Farritor
     source: https://www.washingtonpost.com/opinions/2025/02/24/musk-doge-usaid-cuts-dc/
   - agency: Department of Energy
@@ -855,10 +853,9 @@ Luke Farritor:
     source: https://www.washingtonpost.com/business/2025/02/10/musk-doge-state-department-surrogate/
   - agency: National Institute of Health
     date: '2025-02-24'
-    event: "Reports that DOGE have accounts are working with the NIH Business System\
-      \ Department for NIH\u2019s central electronic business system, which includes\
-      \ finance, budget, procurement, a property-management system, and a grant-tracking\
-      \ system"
+    event: Reports that DOGE have accounts are working with the NIH Business System
+      Department for NIH's central electronic business system, which includes finance,
+      budget, procurement, a property-management system, and a grant-tracking system
     name: Luke Farritor
     source: https://www.wired.com/story/doge-is-inside-the-national-institutes-of-health-nih/
 Marko Elez:
@@ -1139,10 +1136,9 @@ Rachel Riley:
   events:
   - agency: National Institute of Health
     date: '2025-02-24'
-    event: "Reports that DOGE have accounts are working with the NIH Business System\
-      \ Department for NIH\u2019s central electronic business system, which includes\
-      \ finance, budget, procurement, a property-management system, and a grant-tracking\
-      \ system"
+    event: Reports that DOGE have accounts are working with the NIH Business System
+      Department for NIH's central electronic business system, which includes finance,
+      budget, procurement, a property-management system, and a grant-tracking system
     name: Rachel Riley
     source: https://www.wired.com/story/doge-is-inside-the-national-institutes-of-health-nih/
 Riccardo Biasini:
