--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -1875,12 +1875,17 @@ agencies:
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.48.0.pdf
   - date: 2025-03-20
     event: Leland Dudek threatens to shut down the entire Social Security Administration instead of complying with the order
+    named:
+    - Leland Dudek
     source: https://www.washingtonpost.com/politics/2025/03/21/social-security-benefits-trump-doge/
   - date: 2025-03-24
     event: In a status update, SSA leadership confirms "SSA has revoked all SSA DOGE Team members' access to SSA systems of records, including but not limited to the Enterprise Data Warehouse, Numident, Master Beneficiary Record, and Supplemental Security Record"
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.56.0.pdf
   - date: 2025-03-26
     event: During his confirmation hearing, Frank Bisignano, the nominee to run the agency, confirms that he had coordinated with Michael Russo but denied a whistleblower report that he had ordered the appointment of DOGE staff there
+    named:
+    - Leland Dudek
+    - Mike Russo
     source: https://thehill.com/homenews/5212751-sen-wyden-questions-bisignano/
   systems:
   - name: Anti-Fraud Enterprise Solution
