--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -935,6 +935,11 @@ Mike Russo:
     name: Mike Russo
     source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
   - agency: Social Security Administration
+    date: '2025-03-25'
+    event: Scott Coulter is named the new CIO at the Social Security Administration and Mike Russo is moved to a Senior Advisor role with a focus on modernizing systems
+    name: Mike Russo
+    source: https://www.nextgov.com/people/2025/03/ssa-tech-shop-be-led-another-doge-associate/404031/?oref=ng-homepage-river
+  - agency: Social Security Administration
     date: '2025-03-26'
     event: During his confirmation hearing, Frank Bisignano, the nominee to run the agency, confirms that he had coordinated with Michael Russo but denied a whistleblower report that he had ordered the appointment of DOGE staff there
     name: Mike Russo
@@ -1174,6 +1179,11 @@ Scott Coulter:
     event: A Business Insider article reports that Alexander Simonpour has shown up at NASA and also has a GSA address. Riley Sennott and Scott Coulter also are listed
     name: Scott Coulter
     source: https://www.businessinsider.com/tesla-employee-alexander-simonpour-nasa-doge-team-2025-3
+  - agency: Social Security Administration
+    date: '2025-03-25'
+    event: Scott Coulter is named the new CIO at the Social Security Administration and Mike Russo is moved to a Senior Advisor role with a focus on modernizing systems
+    name: Scott Coulter
+    source: https://www.nextgov.com/people/2025/03/ssa-tech-shop-be-led-another-doge-associate/404031/?oref=ng-homepage-river
 
 Scott Langmack:
   agencies:
