--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -252,6 +252,11 @@ agencies:
     event: Trump fires the Inspector General for the Department of Education in a late-night purge
     source: https://www.nytimes.com/interactive/2025/02/11/us/politics/trump-musk-doge-federal-workers.html
   - date: 2025-01-28
+    event: According to his sworn testimony, Adam Ramada is detailed from the USDS to the Department of Education
+    named:
+    - Adam Ramada
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.27.5_1.pdf
+  - date: 2025-01-28
     event: According to his sworn testimony, Adam Ramada started working at the Department of Education on this date. He says there is one other USDS staffer with him, two other detailees and two DOE staffers.
     named:
     - Adam Ramada
@@ -490,6 +495,11 @@ agencies:
     - Cole Killian
     - Nikhil Rajpal
     source: https://www.wired.com/story/elon-musk-digital-coup-doge-data-ai/
+  - date: 2025-01-23
+    event: According to his own testimony, Adam Ramada starts at the USDS
+    named:
+    - Adam Ramada
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.27.5_1.pdf
   - date: 2025-02-11
     event: Trump issues an executive order giving DOGE teams in every agency final approval on any hiring decisions, sets quota of 1 new hire for 4 departures
     source: https://www.whitehouse.gov/presidential-actions/2025/02/implementing-the-presidents-department-of-government-efficiency-workforce-optimization-initiative/
@@ -759,10 +769,10 @@ agencies:
     - Tom Krause
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf#page=13
   - date: 2025-01-21
-    event: Marko Elez starts at the Treasury Department and is granted full read-write access to systems
+    event: Marko Elez starts at the Treasury Department. He is not appointed as a Special Government Employee, meaning he is subject to additional ethics requirements.
     named:
     - Marko Elez
-    source: https://fedscoop.com/treasury-payments-systems-doge-judge-ruling/
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.27.4_3.pdf
   - date: 2025-01-23
     event: Thomas Krause starts at the Treasury Department
     named:
@@ -774,6 +784,11 @@ agencies:
   - date: 2025-01-24
     event: Trump fires the Inspector General for the Department of the Treasury in a late-night purge
     source: https://www.nytimes.com/interactive/2025/02/11/us/politics/trump-musk-doge-federal-workers.html
+  - date: 2025-01-28
+    event: Marko Elez is provided with a laptop from Treasury with with copies of the source code for PAM, SPS, and ASAP in a separate, secure coding environment known as a "secure code repository" or "sandbox."
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.27.3_1.pdf
   - date: 2025-01-29
     event: A ticket for systems access is issued to give Marko Elez read-only access to the FROPK and SPR systems and read-write access to PAM
     named:
@@ -799,6 +814,11 @@ agencies:
     named:
     - Marko Elez
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
+  - date: 2025-02-03
+    event: Marko Elez is provided read-only access to the Payment Automation Manager (PAM) Database, Payment Automation Manager (PAM) File System
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.27.3_1.pdf
   - date: 2025-02-03
     event: A ticket notes that Marko Elez was walked through access to the PAM system and confirms access was read only
     named:
@@ -826,10 +846,10 @@ agencies:
     - Marko Elez
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
   - date: 2025-02-06
-    event: Marko Elez was discovered to inappropriately have read-write access on his laptop
+    event: On the morning of February 6, Treasury discovers that Marko Elez's database access to SPS on February 5 had mistakenly been configured to have read/write permissions instead of read-only
     named:
     - Marko Elez
-    source: https://www.emptywheel.net/2025/02/12/marko-elez-resigned-the-day-his-write-access-to-payment-systems-was-discovered/
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.27.3_1.pdfmarko-elez-resigned-the-day-his-write-access-to-payment-systems-was-discovered/
   - date: 2025-02-06
     event: Marko Elez resigns allegedly after past racist tweets are revealed (but also same day as being discovered with write access)
     source: https://www.npr.org/2025/02/06/nx-s1-5289337/elon-musk-doge-treasury
@@ -860,6 +880,14 @@ agencies:
     event: President Trump issues an executive order mandating that all payments flow through Treasury that agencies must modify SORNs to share data with Treasury as "routine use"
     source: https://www.whitehouse.gov/presidential-actions/2025/03/protecting-americas-bank-account-against-fraud-waste-and-abuse/
   systems:
+  - name: Automated Standard Access For Payments
+    acronym: ASAP
+    description: A payment system that allows recipients to draw down funds from an established account for that recipient.
+  - name: Central Accounting Reporting System
+    acronym: CARS
+    link: https://fiscal.treasury.gov/cars/
+    description: A system which handles accounting for all federal agencies
+    pia: https://www.fiscal.treasury.gov/files/pia/cars-pclia.pdf
   - name: Federal Disbursement Services
     acronym: FDS
     description: The Federal Disbursement Services (FDS) pays out money, helps collect money, handles foreign transactions, and supports Fiscal Service programs.
@@ -869,12 +897,15 @@ agencies:
     link: https://fiscal.treasury.gov/pam/
     description: >
       The U.S. government uses the Payment Automation Manager (PAM) to pay all bills, except payments in foreign currency. PAM processed over 1.2 billion payments in FY 2024, valued at over 4.7 trillion dollars. PAM replaced many older systems that Federal Program Agencies used, saving money and increasing efficiency.
-    risk: PII/CUI of entities receiving payments
+    risk: PII/CUI of entities receiving payments, SSNs, TINs, bank account info
+    pia: https://www.fiscal.treasury.gov/files/pia/pampclia.pdf
   - name: Secure Payment System
     acronym: SPS
     link: https://www.fiscal.treasury.gov/sps/
     description: Secure Payment System (SPS) is used by federal government agencies to securely create, certify, and submit payments to the Fiscal Service.
     risk: Access to CUI/PII of entities submitting/receiving payments. Access to private encryption keys.
+    pia: https://www.fiscal.treasury.gov/files/pia/spspclia.pdf
+    sorn: https://www.federalregister.gov/documents/2020/02/27/2020-03969/privacy-act-of-1974-system-of-records
   cases:
   - name: Centro de Trabajadores Unidos v. Bessent (D.D.C)
     description: Plaintiffs allege Trump administration is illegally looking to share tax information with DHS, ICE, etc.
@@ -1813,6 +1844,12 @@ agencies:
     source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
     named:
     - Akash Bobba
+  - date: 2025-02-12
+    event: An unusual Memorandum of Understanding is signed by Brian Bjelde for OPM and representatives of Social Security and the Department of Education for Akash Bobba to start working at SSA (but he already had been working there, according to Tiffany Flick's testimony)
+    source: https://www.npr.org/2025/03/26/nx-s1-5339842/doge-data-access-privacy-act-social-security-treasury-opm-lawsuit
+    named:
+    - Akash Bobba
+    - Brian Bjelde
   - date: 2025-02-13
     event: According to a sworn declaration by a Deputy Commissioner at SSA, an unindentified DOGE staffer (Employee 1) is onboarded for "duties currently relate to improper payments and SSA's Death Master File" and they are also planning to detail him to the Small Business Administration
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
