--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -31,6 +31,16 @@ agencies:
     - Amy Gleason
     - Rachel Riley
     - Brad Smith
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Luke Farritor
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Brad Smith
+    date: 2025-03-26
   events:
   - date: 2025-02-05
     event: DOGE staff reported with agency buildings with access to certain systems
@@ -78,6 +88,19 @@ agencies:
     organization: ProPublica
     named:
     - Jeremy Lewin
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Luke Farritor
+    - Gavin Kliger
+    - Jordan Wick
+    - Chris Young
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Jordan Wick
+    date: 2025-03-26
   vandalism:
   - Website homepage deleted
   - Social media accounts deleted
@@ -172,6 +195,11 @@ agencies:
     organization: The New York Times
     named:
     - Chris Young
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Kyle Schutt
+    date: 2025-03-26
   events:
   - date: 2025-02-19
     event: Edward Coristine and Kyle Schutt are given access to CISA systems
@@ -247,6 +275,19 @@ agencies:
     - Conor Fennessy
     - Brooks Morgan
     - Adam Ramada
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Jennifer Balajadia
+    - Ethan Shaotran
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Brooks Morgan
+    - Adam Ramada
+    - Ethan Shaotran
+    date: 2025-03-26
   events:
   - date: 2025-01-24
     event: Trump fires the Inspector General for the Department of Education in a late-night purge
@@ -365,6 +406,11 @@ agencies:
     named:
     - Adam Ramada
     - Ryan Riedel
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Luke Farritor
+    date: 2025-03-12
   events:
   - date: 2025-01-24
     event: Trump fires the Inspector General for the Department of Energy in a late-night purge
@@ -463,6 +509,26 @@ agencies:
     - Christopher Stanley
     - Jordan Wick
     - Chris Young
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Marc Andreessen
+    - George Cooper
+    - Amy Gleason
+    - Vinay Hiremath
+    - Anthony Jancso
+    - Michael Kratsios
+    - Katie Miller
+    - Elon Musk
+    - Branden Spikes
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Marc Andreessen
+    - Vinay Hiremath
+    - Shaun Maguire
+    date: 2025-03-26
   events:
   - date: 2024-12-30
     event: Amy Gleason joins the USDS, according to her sworn testimony.
@@ -631,6 +697,11 @@ agencies:
     - Kyle Schutt
     - Brad Smith
     - Chris Young
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Edward Coristine
+    date: 2025-03-12
   events:
   - date: 2025-02-08
     event: DOGE social media account on X boasts about deleting a DHS page of LGBTQI+ resources
@@ -697,6 +768,16 @@ agencies:
     - Marko Elez
     - Aram Moghaddassi
     - Miles Collins
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Aram Moghaddassi
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Adam Ramada
+    date: 2025-03-26
   events:
   - date: 2025-01-24
     event: Trump fires the Inspector General for the Department of Labor in a late-night purge
@@ -764,6 +845,18 @@ agencies:
     - Tom Krause
     - Aram Moghaddassi
     - Ryan Wunderly
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Marko Elez
+    - Tom Krause
+    - Aram Moghaddassi
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Baris Akis
+    date: 2025-03-26
   events:
   - date: 2025-01-08
     event: The leader of the Trump transition team for the Treasury Department sends an email requesting that Thomas Krause be incuded on the "day 1 team, to lead on Fiscal Services modernization efforts."
@@ -958,6 +1051,11 @@ agencies:
     - Erica Jehling
     - Cole Killian
     - Kathryn Armstrong Loving
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Cole Killian
+    date: 2025-03-12
   events:
   - date: 2025-01-24
     event: Trump fires the EPA Inspector General in a late-night purge
@@ -1035,6 +1133,17 @@ agencies:
     - Steve Davis
     - Kyle Schutt
     - Brad Smith
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Edward Coristine
+    - Kyle Schutt
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Kyle Schutt
+    date: 2025-03-26
   events:
   - date: 2025-02-05
     event: Edward Coristine is given a FEMA badge and onboarded into the agency
@@ -1113,6 +1222,22 @@ agencies:
     - Kyle Schutt
     - Ethan Shaotran
     - Thomas Shedd
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Edward Coristine
+    - Jeremy Lewin
+    - Ethan Shaotran
+    - Thomas Shedd
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Stephen Ehikian
+    - Adam Ramada
+    - Kyle Schutt
+    - Ethan Shaotran
+    date: 2025-03-26
   events:
   - date: 2025-02-12
     event: Dozens of workers within the Technology Transformation Service (TTS) are fired.
@@ -1318,6 +1443,12 @@ agencies:
 
 - name: Inter-American Foundation
   acronym: IAF
+  roundups:
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Nate Cavanaugh
+    date: 2025-03-26
   events:
   - date: 2025-02-19
     event: Trump issues an Executive Order "Commencing the Reduction of the Federal Bureaucracy" targeting the Presidio Trust, the Inter-American Foundation, the United States African Development Foundation and the United States Institute of Peace for reductions.
@@ -1444,6 +1575,11 @@ agencies:
     organization: ProPublica
     named:
     - Nikhil Rajpal
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Nikhil Rajpal
+    date: 2025-03-12
   events:
   - date: 2025-02-04
     event: DOGE staff enter NOAA facilities
@@ -1559,6 +1695,24 @@ agencies:
     - Nikhil Rajpal
     - Austin Raynor
     - Amanda Scales
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Riccardo Biasini
+    - Akash Bobba
+    - Brian Bjelde
+    - Edward Coristine
+    - Gavin Kliger
+    - Amanda Scales
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Joe Gebbia
+    - Mike Gonzalez
+    - Scott Kupor
+    - Amanda Scales
+    date: 2025-03-26
   events:
   - date: 2025-01-20
     event: Acting OPM Director Charles Ezell replaces existing CIO Melvin Brown with Greg Hogan
@@ -1721,6 +1875,11 @@ agencies:
     organization: ProPublica
     named:
     - Edward Coristine
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Edward Coristine
+    date: 2025-03-12
   events:
   - date: 2025-01-24
     event: Trump fires the SBA Inspector General in a late-night purge
@@ -1746,10 +1905,12 @@ agencies:
     named:
     - Jeremy Lewin
     - Tarak Makecha
-  people:
-  - Edward Coristine
-  - Luke Farritor
-  - Ross Graeber
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Edward Coristine
+    - Luke Farritor
+    date: 2025-03-12
   events:
   - date: 2025-02-10
     event: Edward Coristine and Luke Farritor are posted to the State Department's Bureau of Diplomatic Technology
@@ -1809,6 +1970,18 @@ agencies:
     - Nikhil Rajpal
     - Payton Rehling
     - Ethan Shaotran
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Akash Bobba
+    - Scott Coulter
+    - Mike Russo
+    date: 2025-03-12
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    date: 2025-03-26
+    named:
+    - Antonio Gracias
   events:
   - date: 2025-01-30
     event: Leland Dudek reaches out to Tiffany Flick, the Associate Director of Budget, Facilities and Security to inform her two DOGE staff would be onboarding. He was a mid-level employee at the time.
@@ -1985,6 +2158,12 @@ agencies:
 
 - name: U.S. African Development Foundation
   acronym: USADF
+  roundups:
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Nate Cavanaugh
+    date: 2025-03-26
   events:
   - date: 2025-02-19
     event: Trump issues an Executive Order "Commencing the Reduction of the Federal Bureaucracy" targeting the Presidio Trust, the Inter-American Foundation, the United States African Development Foundation and the United States Institute of Peace for reductions.
@@ -2088,6 +2267,13 @@ agencies:
     named:
     - Gavin Kliger
     - Jeremy Lewin
+  - source: https://techcrunch.com/2025/03/12/the-people-in-elon-musk-doge-universe/
+    organization: TechCrunch
+    named:
+    - Edward Coristine
+    - Luke Farritor
+    - Gavin Kliger
+    date: 2025-03-12
   events:
   - date: 2025-01-27
     event: A DOGE official first arrives at USAID. Later, senior staff are summoned to a meeting with Gavin Kliger and Luke Farritor.
@@ -2298,6 +2484,11 @@ agencies:
     organization: ProPublica
     named:
     - Justin Fulcher
+  - source: https://techcrunch.com/2025/03/26/19-founders-and-vcs-working-with-elon-musks-doge/
+    organization: TechCrunch
+    named:
+    - Justin Fulcher
+    date: 2025-03-26
   events:
   - date: 2025-01-24
     event: Trump fires the VA Inspector General in a late-night purge
