--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -31,6 +31,7 @@ Adam Ramada:
 Akash Bobba:
   agencies:
   - Department of Education
+  - General Services Administration
   - Office of Personnel Management
   - Social Security Administration
   - US Digital Service/Department of Government Efficiency
@@ -1296,6 +1297,7 @@ Steve Davis:
 Tarak Makecha:
   agencies:
   - Department of State
+  - Office of Personnel Management
 
 Ted Malaska:
   agencies:
